new products pages

--- a/apple.html
+++ b/apple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Microsoft - Yashasvi</title>
+		<title>Apple - Yashasvi</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="shortcut icon" href="images/favicon.ico" />
@@ -10,8 +10,8 @@
 	<body class="right-sidebar is-preload">
 		<div id="page-wrapper">
 			<section id="header">
-				<img class="portfolio-images" width="200" height="200" src="images/microsoft-windows-logo.svg" alt="Microsoft - Yashasvi" />
-					<h1><a href="#"><b>Microsoft</b></a></h1>
+				<img class="portfolio-images" width="200" height="200" src="images/mac.svg" alt="Apple - Yashasvi" />
+					<h1><a href="#"><b>Apple</b></a></h1>
 					<div class="full-nav">
 					<nav id="nav">
 
@@ -60,109 +60,26 @@
 								<article class="box post">
 									<section>
 										<header>
-											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Microsoft Products Sold</b></h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Apple Products Sold</b></h3>
 										</header>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Windows</b></h3>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Apple Devices</b></h3>
 										<p>
 											<ol>
-												<li>Windows 10</li>
-												<li>Windows 10 Mobile</li>
-												<li>Windows Mixed Reality</li>
-												<li>Windows Insider Program</li>
-												<li>Windows 8.1</li>
-												<li>Windows Rt8.1</li>
-												<li>Windows 7</li>
-												<li>Windows Server</li>
-												<li>Windows It Administrators</li>
-												<li>Windows phone 8</li>
-												<li>Windows Update</li>
-												<li>Internet Explorer</li>
+												<li>Mac</li>
+												<li>iMac Pro</li>
+												<li>MacBook</li>
+												<li>MacBook Air</li>
+												<li>MacBook Pro</li>
+												<li>iMac</li>
+												<li>Mac Pro</li>
+												<li>Mac Mini</li>
 											</ol>
 										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; MS Office</b></h3>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; iPad</b></h3>
 										<p>
 											<ol>
-												<li>Office For Home</li>
-												<li>Office 365 For Business</li>
-												<li>Excel</li>
-												<li>Word</li>
-												<li>Outlook</li>
-												<li>Outlook 2016 For Mac</li>
-												<li>PowerPoint</li>
-												<li>One Note</li>
-												<li>Access</li>
-												<li>Publisher</li>
-												<li>Office For Iphone And iPad</li>
-												<li>Office For Android</li>
-												<li>Office For Windows Phone</li>
-											</ol>
-										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Devices and more</b></h3>
-										<p>
-											<ol>
-												<li>Surface</li>
-												<li>Surface Hub</li>
-												<li>Xbox</li>
-												<li>Microsoft Mouse, Keyboards, LifeChat And Life camp</li>
-												<li>Mobile Devices</li>
-												<li>Device Services And Repairs</li>
-											</ol>
-										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Applications</b></h3>
-										<p>
-											<ol>
-												<li>Cortana</li>
-												<li>Microsoft Edge</li>
-												<li>Skype</li>
-												<li>Skype For Business</li>
-												<li>One Drive</li>
-												<li>Microsoft Terms</li>
-												<li>Delve</li>
-												<li>Sway</li>
-												<li>Yammer</li>
-											</ol>
-										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Business</b></h3>
-										<p>
-											<ol>
-												<li>Surface For Business</li>
-												<li>Skype For Business Online</li>
-												<li>Skype For Business Server</li>
-												<li>Microsoft Azure</li>
-												<li>Microsoft Intune</li>
-												<li>Microsoft Dynamics Ax</li>
-												<li>Microsoft Dynamics Crm</li>
-												<li>Microsoft Dynamics Gp</li>
-												<li>Other Microsoft Dynamic Business Solution</li>
-												<li>Microsoft Partner Center Support</li>
-											</ol>
-										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Developer and IT</b></h3>
-										<p>
-											<ol>
-												<li>Windows Sdk And App Development</li>
-												<li>Visual Studio</li>
-												<li>Microsoft, Net Framework</li>
-												<li>Hardware Development</li>
-												<li>Microsoft Exchange Server</li>
-												<li>Microsoft Sal Server</li>
-												<li>Microsoft Share Point Server</li>
-												<li>System Center</li>
-											</ol>
-										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; More</b></h3>
-										<p>
-											<ol>
-												<li>Microsoft Account</li>
-												<li>Microsoft Store</li>
-												<li>Privacy</li>
-												<li>Security</li>
-												<li>Microsoft Lifecycle Policy</li>
-												<li>Bing</li>
-												<li>Bing Ads</li>
-												<li>Msn</li>
-												<li>Health Vault</li>
-												<li>PC Gaming</li>
+												<li>iPad Pro</li>
+												<li>iPad Mini 4</li>
 											</ol>
 										</p>
 									</section>
