--- a/oracle.html
+++ b/oracle.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Microsoft - Yashasvi</title>
+		<title>Oracle - Yashasvi</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="shortcut icon" href="images/favicon.ico" />
@@ -10,8 +10,8 @@
 	<body class="right-sidebar is-preload">
 		<div id="page-wrapper">
 			<section id="header">
-				<img class="portfolio-images" width="200" height="200" src="images/microsoft-windows-logo.svg" alt="Microsoft - Yashasvi" />
-					<h1><a href="#"><b>Microsoft</b></a></h1>
+				<img class="portfolio-images" width="200" height="200" src="images/jar.svg" alt="Oracle - Yashasvi" />
+					<h1><a href="#"><b>Oracle</b></a></h1>
 					<div class="full-nav">
 					<nav id="nav">
 
@@ -60,109 +60,122 @@
 								<article class="box post">
 									<section>
 										<header>
-											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Microsoft Products Sold</b></h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Oracle Products Sold</b></h3>
 										</header>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Windows</b></h3>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Human capital Management</b></h3>
 										<p>
 											<ol>
-												<li>Windows 10</li>
-												<li>Windows 10 Mobile</li>
-												<li>Windows Mixed Reality</li>
-												<li>Windows Insider Program</li>
-												<li>Windows 8.1</li>
-												<li>Windows Rt8.1</li>
-												<li>Windows 7</li>
-												<li>Windows Server</li>
-												<li>Windows It Administrators</li>
-												<li>Windows phone 8</li>
-												<li>Windows Update</li>
-												<li>Internet Explorer</li>
+												<li>Global human resources</li>
+												<li>Talent management</li>
+												<li>Workforces rewards</li>
+												<li>Workforce management</li>
+												<li>Work life solutions</li>
+												<li>HCM Analytics</li>
+												<li>HCM cloud for midsize</li>
 											</ol>
 										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; MS Office</b></h3>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Enterprise Performance Management</b></h3>
 										<p>
 											<ol>
-												<li>Office For Home</li>
-												<li>Office 365 For Business</li>
-												<li>Excel</li>
-												<li>Word</li>
-												<li>Outlook</li>
-												<li>Outlook 2016 For Mac</li>
-												<li>PowerPoint</li>
-												<li>One Note</li>
-												<li>Access</li>
-												<li>Publisher</li>
-												<li>Office For Iphone And iPad</li>
-												<li>Office For Android</li>
-												<li>Office For Windows Phone</li>
+												<li>Account reconciliation</li>
+												<li>Enterprise data management</li>
+												<li>Enterprise performance reporting</li>
+												<li>Enterprise planning</li>
+												<li>Financial consolidation and close</li>
+												<li>Planning and budgeting</li>
+												<li>Tax reporting</li>
+												<li>Profitability and cost management</li>
 											</ol>
 										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Devices and more</b></h3>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Customer Experiences</b></h3>
 										<p>
 											<ol>
-												<li>Surface</li>
-												<li>Surface Hub</li>
-												<li>Xbox</li>
-												<li>Microsoft Mouse, Keyboards, LifeChat And Life camp</li>
-												<li>Mobile Devices</li>
-												<li>Device Services And Repairs</li>
+												<li>Marketing</li>
+												<li>Engagement</li>
+												<li>Sales</li>
+												<li>Services</li>
+												<li>Configure, price, and quote</li>
+												<li>Commerce</li>
+												<li>Loyalty</li>
+												<li>Customer data management</li>
+												<li>Sales performance management</li>
+												<li>Social</li>
+												<li>Data cloud</li>
+												<li>CRM Analytics</li>
+												<li>CX cloud for midsize</li>
 											</ol>
 										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Applications</b></h3>
+										</p>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Enterprise Resources Planning</b></h3>
 										<p>
 											<ol>
-												<li>Cortana</li>
-												<li>Microsoft Edge</li>
-												<li>Skype</li>
-												<li>Skype For Business</li>
-												<li>One Drive</li>
-												<li>Microsoft Terms</li>
-												<li>Delve</li>
-												<li>Sway</li>
-												<li>Yammer</li>
+												<li>Financials</li>
+												<li>Revenue management</li>
+												<li>Accounting hub</li>
+												<li>Project financial management</li>
+												<li>Project management</li>
+												<li>Procurement</li>
+												<li>Risk management</li>
+												<li>ERP Analytics</li>
+												<li>ERP cloud for midsize</li>
+												<li>Internet of things app</li>
+												<li>loT asset monitoring</li>
+												<li>loT production monitoring</li>
+												<li>loT fleet monitoring</li>
+												<li>loT connected worker</li>
 											</ol>
 										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Business</b></h3>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Supply Chain Management</b></h3>
 										<p>
 											<ol>
-												<li>Surface For Business</li>
-												<li>Skype For Business Online</li>
-												<li>Skype For Business Server</li>
-												<li>Microsoft Azure</li>
-												<li>Microsoft Intune</li>
-												<li>Microsoft Dynamics Ax</li>
-												<li>Microsoft Dynamics Crm</li>
-												<li>Microsoft Dynamics Gp</li>
-												<li>Other Microsoft Dynamic Business Solution</li>
-												<li>Microsoft Partner Center Support</li>
+												<li>In memory cost management</li>
+												<li>Inventory management</li>
+												<li>Logistics</li>
+												<li>Miantenance</li>
+												<li>Order management</li>
+												<li>Manufacturing</li>
+												<li>Procurement</li>
+												<li>Product lifecycle management</li>
+												<li>Product master data management</li>
+												<li>Supply chain collaboration and visibility</li>
+												<li>Supply chain planning</li>
+												<li>SCM analytics</li>
 											</ol>
 										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Developer and IT</b></h3>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Industry Solutions</b></h3>
 										<p>
 											<ol>
-												<li>Windows Sdk And App Development</li>
-												<li>Visual Studio</li>
-												<li>Microsoft, Net Framework</li>
-												<li>Hardware Development</li>
-												<li>Microsoft Exchange Server</li>
-												<li>Microsoft Sal Server</li>
-												<li>Microsoft Share Point Server</li>
-												<li>System Center</li>
+												<li>Automotive</li>
+												<li>Communications</li>
+												<li>Consumer goods and retail</li>
+												<li>Education and research</li>
+												<li>Financial service</li>
+												<li>Health care</li>
+												<li>High technology</li>
+												<li>Industrial manufacturing</li>
+												<li>Public sector</li>
 											</ol>
 										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; More</b></h3>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Server and Storage System</b></h3>
 										<p>
 											<ol>
-												<li>Microsoft Account</li>
-												<li>Microsoft Store</li>
-												<li>Privacy</li>
-												<li>Security</li>
-												<li>Microsoft Lifecycle Policy</li>
-												<li>Bing</li>
-												<li>Bing Ads</li>
-												<li>Msn</li>
-												<li>Health Vault</li>
-												<li>PC Gaming</li>
+												<li>Big data appliance</li>
+												<li>Database appliance</li>
+												<li>Exdata database machine</li>
+												<li>Exlogic elastic cloud</li>
+												<li>Exalytics business intelligence machine</li>
+												<li>Oracle linux</li>
+												<li>Private cloud appliance</li>
+												<li>Secure global desktop</li>
+												<li>Solaris 10</li>
+												<li>Solaris 11</li>
+												<li>Solaries studio</li>
+												<li>Sun networking</li>
+												<li>Sun ray products</li>
+												<li>Sun servers</li>
+												<li>Sun storsge and tape</li>
+												<li>Virtual desktop infrastructure</li>
+												<li>Oracle VM</li>
 											</ol>
 										</p>
 									</section>
