--- a/products.html
+++ b/products.html
@@ -306,7 +306,7 @@
 													<img class="portfolio-images" width="200" height="200" src="images/videoconf.svg" alt="Polycom" /><br>
 													<header>
 														<div class="center">
-															<h3><b>Polycom</b></h3>
+															<h3><b><a href="polycom.html" target="_blank">Polycom</a></b></h3>
 														</div>
 														<br>
 													</header>
@@ -318,7 +318,7 @@
 													<img class="portfolio-images" width="200" height="200" src="images/microsoft-windows-logo.svg" alt="Microsoft" /><br>
 													<header>
 														<div class="center">
-															<h3><b>Microsoft</b></h3>
+															<h3><b><a href="microsoft.html" target="_blank">Microsoft</a></b></h3>
 														</div>
 														<br>
 													</header>
@@ -330,7 +330,7 @@
 													<img class="portfolio-images" width="200" height="200" src="images/mac.svg" alt="Apple" /><br>
 													<header>
 														<div class="center">
-															<h3><b>Apple</b></h3>
+															<h3><b><a href="apple.html" target="_blank">Apple</a></b></h3>
 														</div>
 														<br>
 													</header>
@@ -342,7 +342,7 @@
 													<img class="portfolio-images" width="200" height="200" src="images/jar.svg" alt="Oracle" /><br>
 													<header>
 														<div class="center">
-															<h3><b>Oracle</b></h3>
+															<h3><b><a href="oracle.html" target="_blank">Oracle</a></b></h3>
 														</div>
 														<br>
 													</header>
