--- a/index.html
+++ b/index.html
@@ -267,6 +267,9 @@
 									</section>
 							</div>
 							<div class="col-12">
+								<div class="center">
+									<p><b>Our OEMs:</b></p>
+								</div>
 								<div class="carousel"
 								data-flickity='{ "imagesLoaded": true, "percentPosition": false, "autoPlay": 1000, "wrapAround": true }'>
 								<div class="carousel-cell">
@@ -346,6 +349,86 @@
 								</div>
 								</div>
 					</div>
+							<div class="col-12">
+								<div class="center">
+									<p><b>Clientele:</b></p>
+								</div>
+								<div class="carousel"
+								data-flickity='{ "imagesLoaded": true, "percentPosition": false, "autoPlay": 1000, "wrapAround": true }'>
+								<div class="carousel-cell">
+									<img src="assets/css/images/clients/tenova.jpg" alt="Tenova" />
+								</div>
+								<div class="carousel-cell">
+									<img src="assets/css/images/clients/harman.png" alt="Harman International" />
+								</div>
+								<div class="carousel-cell">
+									<img src="assets/css/images/clients/faiveley.png" alt="Faiveley" />
+								</div>
+								<div class="carousel-cell">
+									<img src="assets/css/images/clients/safran.jpg" alt="Safran" />
+								</div>
+								<div class="carousel-cell">
+									<img src="assets/css/images/clients/comsol.png" alt="Comsol" />
+								</div>
+								<div class="carousel-cell">
+									<img src="assets/css/images/clients/minjar.png" alt="Minjar" />
+								</div>
+								<div class="carousel-cell">
+									<img src="assets/css/images/clients/hical.jpg" alt="Hical" />
+								</div>
+								<div class="carousel-cell">
+									<img src="assets/css/images/clients/intuit.jpg" alt="Intuit" />
+								</div>
+								<div class="carousel-cell">
+									<img src="assets/css/images/clients/karle.png" alt="Karle Infra" />
+								</div>
+								<div class="carousel-cell">
+									<img src="assets/css/images/clients/cosma.jpg" alt="Cosma" />
+								</div>
+								<div class="carousel-cell">
+									<img src="assets/css/images/clients/lumiplan.png" alt="Lumiplan" />
+								</div>
+								<div class="carousel-cell">
+									<img src="assets/css/images/clients/randox.jpg" alt="Randox Lab" />
+								</div>
+								<div class="carousel-cell">
+									<img src="assets/css/images/clients/herman.png" alt="Herman Miller" />
+								</div>
+								<div class="carousel-cell">
+									<img src="assets/css/images/clients/cgi.jpg" alt="CGI" />
+								</div>
+								<div class="carousel-cell">
+									<img src="assets/css/images/clients/ansaldo.png" alt="Ansaldo" />
+								</div>
+								<div class="carousel-cell">
+									<img src="assets/css/images/clients/rsam.jpg" alt="Rsam" />
+								</div>
+								<div class="carousel-cell">
+									<img src="assets/css/images/clients/quest.jpg" alt="Quest" />
+								</div>
+								<div class="carousel-cell">
+									<img src="assets/css/images/clients/cisco.png" alt="Cisco" />
+								</div>
+								<div class="carousel-cell">
+									<img src="assets/css/images/clients/amber.png" alt="Amberroad" />
+								</div>
+								<div class="carousel-cell">
+									<img src="assets/css/images/clients/cisco.png" alt="Cisco" />
+								</div>
+								<div class="carousel-cell">
+									<img src="assets/css/images/clients/austin.png" alt="Austin Med" />
+								</div>
+								<div class="carousel-cell">
+									<img src="assets/css/images/clients/bharadwaj.jpg" alt="Bharadwaj Pharma" />
+								</div>
+								<div class="carousel-cell">
+									<img src="assets/css/images/clients/spirent.jpg" alt="Spirent" />
+								</div>
+								<div class="carousel-cell">
+									<img src="assets/css/images/clients/fortigo.png" alt="Fortigo" />
+								</div>
+								</div>
+					</div>
 				</div>
 				</section>
 
@@ -360,17 +443,17 @@
 									<ul class="dates">
 										<li>
 											<span class="date"><strong># 1</strong></span>
-											<h3><b><a href="#">Terms of Use</a></b></h3>
+											<h3><b><a href="terms-of-use.html" target="_blank">Terms of Use</a></b></h3>
 											<p><b><i>Links to other websites, Termination, Governing Laws.</i></b></p>
 										</li>
 										<li>
 											<span class="date"><strong># 2</strong></span>
-											<h3><b><a href="#">Privacy Policy</a></b></h3>
+											<h3><b><a href="privacy-policy.html" target="_blank">Privacy Policy</a></b></h3>
 											<p><b><i>Information Collection and Use, Log Data, Cookies, Services Providers, Security, Children's Privacy.</i></b></p>
 										</li>
 										<li>
 											<span class="date"><strong># 3</strong></span>
-											<h3><b><a href="#">Code of Business Conduct</a></b></h3>
+											<h3><b><a href="code-of-conduct.html" target="_blank">Code of Business Conduct</a></b></h3>
 											<p><b><i>Transparency, Respect for the Individual, Set Tone at the Top, Uphold the Law, Competition, Proprietary Information,
 												Selective Disclosure, Conflicts of Interest, Accepting Business Courtesies, Corporate Recordkeeping, Accountability,
 												Use of Company Resources, Media Inquiries.</i></b></p>
