--- a/products.html
+++ b/products.html
@@ -354,7 +354,7 @@
 													<img class="portfolio-images" width="200" height="200" src="images/aws-big-logo.svg" alt="AWS" /><br>
 													<header>
 														<div class="center">
-															<h3><b>AWS</b></h3>
+															<h3><b><a href="aws.html" target="_blank">AWS</a></b></h3>
 														</div>
 														<br>
 													</header>
@@ -366,7 +366,7 @@
 													<img class="portfolio-images" width="200" height="200" src="images/pc-tower-and-monitor.svg" alt="Lenovo" /><br>
 													<header>
 														<div class="center">
-															<h3><b>Lenovo</b></h3>
+															<h3><b><a href="lenovo.html" target="_blank">Lenovo</a></b></h3>
 														</div>
 														<br>
 													</header>
@@ -390,17 +390,17 @@
 									<ul class="dates">
 										<li>
 											<span class="date"><strong># 1</strong></span>
-											<h3><b><a href="#">Terms of Use</a></b></h3>
+											<h3><b><a href="terms-of-use.html" target="_blank">Terms of Use</a></b></h3>
 											<p><b><i>Links to other websites, Termination, Governing Laws.</i></b></p>
 										</li>
 										<li>
 											<span class="date"><strong># 2</strong></span>
-											<h3><b><a href="#">Privacy Policy</a></b></h3>
+											<h3><b><a href="privacy-policy.html" target="_blank">Privacy Policy</a></b></h3>
 											<p><b><i>Information Collection and Use, Log Data, Cookies, Services Providers, Security, Children's Privacy.</i></b></p>
 										</li>
 										<li>
 											<span class="date"><strong># 3</strong></span>
-											<h3><b><a href="#">Code of Business Conduct</a></b></h3>
+											<h3><b><a href="code-of-conduct.html" target="_blank">Code of Business Conduct</a></b></h3>
 											<p><b><i>Transparency, Respect for the Individual, Set Tone at the Top, Uphold the Law, Competition, Proprietary Information,
 												Selective Disclosure, Conflicts of Interest, Accepting Business Courtesies, Corporate Recordkeeping, Accountability,
 												Use of Company Resources, Media Inquiries.</i></b></p>
